# miniMUAS

./: .gitignore  CMakeLists.txt  CMakeLists_old.txt  Cargo.toml  default.nix  flake.nix  readme.md  shell.nix
artifacts/: compare.html  deck.html  demo.html  report.html
config/: app.yml  minimuas.policies  v2_minimuas.policies
crates/muas-agent/: Cargo.toml
crates/muas-agent/src/: config.rs  coord.rs  journal.rs  lib.rs  main.rs  mission.rs  queue.rs  rc.rs  sensor.rs  service_impl.rs  telemetry.rs
crates/muas-agent/tests/: smoke.rs
crates/muas-artifacts/: Cargo.toml
crates/muas-artifacts/fixtures/: bootstrap.example.json
crates/muas-artifacts/fixtures/runs/radio-apsta/: agent-iuas-01-1780000000.jsonl  agent-wuas-01-1780000000.jsonl  dash-recording.jsonl
crates/muas-artifacts/fixtures/runs/radio-ndr-contested/: agent-iuas-01-1780000000.jsonl  agent-wuas-01-1780000000.jsonl  dash-recording.jsonl
crates/muas-artifacts/fixtures/runs/radio-ndr-good/: agent-iuas-01-1780000000.jsonl  agent-wuas-01-1780000000.jsonl  dash-recording.jsonl
crates/muas-artifacts/src/: audit.rs  chains.rs  contracts.rs  dataset.rs  lib.rs  main.rs  metrics.rs
crates/muas-artifacts/src/render/: compare.rs  deck.rs  demo.rs  mod.rs  report.rs
crates/muas-artifacts/tests/: artifacts.rs
crates/muas-contracts/: Cargo.toml
crates/muas-contracts/src/: anomaly.rs  lib.rs  names.rs  policy.rs  rc.rs  sensors.rs  services.rs  strategy.rs  tasks.rs
crates/muas-dashboard/: Cargo.toml
crates/muas-dashboard/assets/: dashboard.html
crates/muas-dashboard/src/: catalog.rs  config.rs  detect.rs  hub.rs  lens.rs  lib.rs  main.rs  mission.rs  ndn.rs  providers.rs  raster.rs  rc.rs  server.rs
crates/muas-dashboard/tests/: mission.rs  preview.rs  smoke.rs
crates/muas-flight/: Cargo.toml
crates/muas-flight/src/: geo.rs  lib.rs
crates/muas-mavlink/: Cargo.toml
crates/muas-mavlink/src/: lib.rs
crates/muas-rc/: Cargo.toml
crates/muas-rc/src/: lib.rs
crates/muas-sim/: Cargo.toml
crates/muas-sim/examples/: radio_comparison.rs
crates/muas-sim/src/: anomaly.rs  control.rs  fleet.rs  lib.rs  metrics.rs  nettap.rs  run_config.rs  verdict.rs
crates/muas-sim/tests/: catalog_drift.rs  dispatch.rs  parity.rs  queue.rs
deployment-run/: deployment-run-1783698717.jsonl  deployment-run-1783699448.jsonl  deployment-run-1783706801.jsonl  deployment-run-1783706905.jsonl  deployment-run-1783707278.jsonl  deployment-run-1783707360.jsonl  deployment-run-1783707435.jsonl  deployment-run-1783707623.jsonl  run-config-run-1783698717.json  run-config-run-1783699448.json  run-config-run-1783706801.json  run-config-run-1783706905.json  run-config-run-1783707278.json  run-config-run-1783707360.json  run-config-run-1783707435.json  run-config-run-1783707623.json
deployment-run/journals/: agent-iuas-01-1783698737.jsonl  agent-iuas-01-1783699469.jsonl  agent-iuas-01-1783706822.jsonl  agent-iuas-01-1783706926.jsonl  agent-iuas-01-1783707299.jsonl  agent-iuas-01-1783707381.jsonl  agent-iuas-01-1783707456.jsonl  agent-iuas-01-1783707644.jsonl  agent-iuas-02-1783698747.jsonl  agent-iuas-02-1783699479.jsonl  agent-iuas-02-1783706832.jsonl  agent-iuas-02-1783706936.jsonl  agent-iuas-02-1783707309.jsonl  agent-iuas-02-1783707391.jsonl  agent-iuas-02-1783707466.jsonl  agent-iuas-02-1783707654.jsonl  agent-wuas-01-1783698727.jsonl  agent-wuas-01-1783699459.jsonl  agent-wuas-01-1783706811.jsonl  agent-wuas-01-1783706916.jsonl  agent-wuas-01-1783707288.jsonl  agent-wuas-01-1783707370.jsonl  agent-wuas-01-1783707445.jsonl  agent-wuas-01-1783707634.jsonl
deployment-run/replays/: dash-20260710-155228.jsonl  dash-20260710-180712.jsonl  dash-20260710-180856.jsonl  dash-20260710-181509.jsonl  dash-20260710-182054.jsonl
docs/: v2-field-day.md  v2_flight_services.md
docs/v3/: ARCHITECTURE.md  BACKLOG.md  COMPANION-DYNAMICS.md  FEEDBACK.md  FIELD-QOL.md  KNOWN-ISSUES.md  LIFECYCLE-RECORDS.md  MDEPLOY-PLAN.md  NETWORK-VIZ.md  RC-CONTROL.md  REPO-TOPOLOGY.md  ROUND-3.md  UNTRAPPED.md  VISION.md  WATERLINE-INPUT.md  radio-comparison.md
docs/v3/requests/: maintainer-report-2-2026-07-11.md  maintainer-report-2026-07-10.md  waterline-feedback-2-2026-07-10.md  waterline-feedback-2026-07-10.md
docs/v3/responses/: waterline-2026-07-10.md
docs/v3/surveys/: minimuas-v2.md  ndf-waterline-docs.md  ndn-integration-cheatsheet.md  ndn-workspace-ndf-rs.md  uas-ipbrc.md  waterline-draft.md
examples/python/v2_flight_services/: README.md  audio.py  bundle.py  camera.py  contracts.py  dashboard.html  dataplane.py  detector.py  fetch_tiles.py  hitl_probe.py  investigate_plan.py  mavlink_flight.py  metrics.py  mock_bus.py  ndnsf_binding_sketch.py  ndnsf_runtime.py  preflight_ndnsf.py  probe2_adapter_path.py  probe_mavlink_stream.py  raster.py  run_bench.py  run_dashboard.py  run_drone_agent.py  run_gcs_provider.py  run_iuas_provider.py  run_mock_mission.py  run_ndnsf_controller.py  run_ndnsf_stack.py  run_sitl_investigation.py  run_wuas_user.py
examples/python/v2_flight_services/docker/: Dockerfile  Dockerfile.dockerignore  README.md  compose.fleet.yml  run_fleet_sim.sh  run_v2_stack_container.sh
examples/python/v2_flight_services/sim/: RUNBOOK.md  fleet.policies  launch_fleet.py  smoke.py  start_sitl.sh  ws_driver.py
examples/python/v2_flight_services/tools/: aggregate_latency.py
patches/: config_dir.patch  ndnget_path.patch
src/: metrics.hpp  minimuas_GCS.cpp  minimuas_GCS_shell.cpp  minimuas_IUAS.cpp  minimuas_WUAS.cpp  service-controller.cpp
src/services/: entity.hpp  flightctrl.hpp  iuas.hpp  sensor.hpp  wuas.hpp
src/util/: latency.hpp
