[workspace]
resolver = "2"
members = [
    "crates/muas-flight",
    "crates/muas-mavlink",
    "crates/muas-contracts",
    "crates/muas-agent",
    "crates/muas-dashboard",
    "crates/muas-rc",
    "crates/muas-sim",
]

[workspace.package]
version = "3.0.0-alpha.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Quarmire/miniMUAS"

[workspace.dependencies]
# intra-workspace
muas-flight = { path = "crates/muas-flight" }
muas-mavlink = { path = "crates/muas-mavlink" }
muas-contracts = { path = "crates/muas-contracts" }

# sibling checkouts under ~/Documents/Dev (same convention as ndf-rs refounding)
manifest = { path = "../ndn-workspace/flotilla/crates/core/manifest" }
render-contract = { path = "../ndn-workspace/flotilla/crates/core/render-contract" }
ndf-core = { path = "../ndf-rs/refounding/ndf-core" }

# common third-party
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "signal"] }
