[workspace]
resolver = "2"
members = [
    "crates/muas-contracts",
    "crates/muas-agent",
    "crates/muas-dashboard",
    "crates/muas-sim",
]

[workspace.package]
version = "3.0.0-alpha.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/JacobsSensorLab/miniMUAS"

[workspace.dependencies]
# intra-workspace
muas-contracts = { path = "crates/muas-contracts" }

# UAS stack sibling repos (dev linkage = path deps; deploys pin by rev —
# see docs/v3/REPO-TOPOLOGY.md)
uas-flight = { path = "../uas-flight/crates/uas-flight" }
uas-mavlink = { path = "../uas-flight/crates/uas-mavlink" }
uas-fleet-data = { path = "../uas-fleet/crates/uas-fleet-data" }
uas-fleet-node = { path = "../uas-fleet/crates/uas-fleet-node" }
uas-rc = { path = "../uas-fleet/crates/uas-rc" }
uas-console = { path = "../uas-console/crates/uas-console" }

# ndn-workspace / ndf-rs sibling checkouts
manifest = { path = "../ndn-workspace/flotilla/crates/core/manifest" }
render-contract = { path = "../ndn-workspace/flotilla/crates/core/render-contract" }
ndf-core = { path = "../ndf-rs/refounding/ndf-core" }

# common third-party
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "signal"] }
