[workspace]
resolver = "2"
members = [
    "crates/muas-contracts",
    "crates/muas-agent",
    "crates/muas-dashboard",
    "crates/muas-sim",
    "crates/muas-artifacts",
]

[workspace.package]
version = "3.0.0-alpha.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/JacobsSensorLab/miniMUAS"

[workspace.dependencies]
# intra-workspace
muas-contracts = { path = "crates/muas-contracts" }

# UAS stack sibling repos (dev linkage = path deps; deploys pin by rev —
# see docs/v3/REPO-TOPOLOGY.md)
uas-flight = { path = "../uas-flight/crates/uas-flight" }
uas-mavlink = { path = "../uas-flight/crates/uas-mavlink" }
uas-fleet-data = { path = "../uas-fleet/crates/uas-fleet-data" }
uas-fleet-node = { path = "../uas-fleet/crates/uas-fleet-node" }
uas-rc = { path = "../uas-fleet/crates/uas-rc" }
uas-console = { path = "../uas-console/crates/uas-console" }

# ndn-workspace / ndf-rs sibling checkouts
manifest = { path = "../ndn-workspace/flotilla/crates/core/manifest" }
render-contract = { path = "../ndn-workspace/flotilla/crates/core/render-contract" }
ndf-core = { path = "../ndf-rs/refounding/ndf-core" }
ndf-apps = { path = "../ndf-rs/refounding/ndf-apps" }
ndf-policy = { path = "../ndf-rs/refounding/ndf-policy" }
ndf-spark = { path = "../ndf-rs/refounding/ndf-spark" }
ndn-engine = { path = "../ndn-workspace/ndn-rs/crates/forwarding/ndn-engine" }
ndn-app = { path = "../ndn-workspace/ndn-rs/crates/app/ndn-app" }
ndn-face = { path = "../ndn-workspace/ndn-rs/crates/faces/ndn-face" }
ndn-packet = { path = "../ndn-workspace/ndn-rs/crates/core/ndn-packet", features = ["std"] }
ndn-transport = { path = "../ndn-workspace/ndn-rs/crates/core/ndn-transport" }
ndn-sync = { path = "../ndn-workspace/ndn-rs/crates/protocols/ndn-sync" }
ndn-service-core = { path = "../ndn-workspace/ndn-ext/crates/service/ndn-service-core" }
ndn-service-macro = { path = "../ndn-workspace/ndn-ext/crates/service/ndn-service-macro" }
ndn-rpc = { path = "../ndn-workspace/ndn-ext/crates/service/ndn-rpc", features = ["engine"] }
ndn-ndnsf = { path = "../ndn-workspace/ndn-ext/crates/service/ndn-ndnsf", features = ["driver"] }

# common third-party
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "signal"] }
tokio-util = "0.7"
bytes = "1"
ed25519-dalek = { version = "2", features = ["std"] }
