[package]
name = "muas-contracts"
description = "miniMUAS v3 names, wire types, semantic manifests, and service definitions."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
# Sibling-checkout deps (the meaning-of-bytes layer). These double as the
# canary that our ndn-workspace/ndf-rs checkouts stay build-compatible.
manifest = { workspace = true }
render-contract = { workspace = true }
ndf-core = { workspace = true }
