[package]
name = "muas-contracts"
description = "miniMUAS v3 names, wire types, semantic manifests, and service definitions."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
# The service seam: `#[ndn_service]` definitions over ndn-service-core's
# contract⇄carrier split (ndn-rpc / ndn-ndnsf carriers plug in at the agent).
ndn-service-core = { workspace = true }
ndn-service-macro = { workspace = true }
# Sibling-checkout deps (the meaning-of-bytes layer). These double as the
# canary that our ndn-workspace/ndf-rs checkouts stay build-compatible.
manifest = { workspace = true }
render-contract = { workspace = true }
ndf-core = { workspace = true }
# Strategy records + evaluator (ROUND-3 §2): the agent ack path and the
# dashboard dispatcher interpret these. Re-exported through `strategy` so the
# dashboard reaches them without a dep of its own (its Cargo.toml is owned by
# the RC surface).
uas-fleet-strategy = { workspace = true }
