[package]
name = "muas-dashboard"
description = "miniMUAS v3 GCS console: mission state machine, recorder/replay, manifest-driven UI."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["tile-proxy"]
# Upstream satellite-tile proxy-and-cache (bench with internet). Without it
# the tile route serves the offline cache only and the UI falls back to the
# 10 m grid.
tile-proxy = ["dep:reqwest"]

[dependencies]
# workspace-listed
muas-contracts = { workspace = true }
uas-console = { workspace = true }
manifest = { workspace = true }
uas-flight = { workspace = true }
uas-fleet-data = { workspace = true }
ndn-app = { workspace = true }
ndn-engine = { workspace = true }
ndn-face = { workspace = true }
ndn-packet = { workspace = true }
ndn-rpc = { workspace = true }
ndn-service-core = { workspace = true }
# RC-CONTROL R2 pilot surface: the wire frame, RatePacer, RcTarget selector,
# and the plain-UDP UdpRcSender that aims at the agent's `--rc listen:<addr>`.
uas-rc = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["net", "fs", "io-util"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# new third-party (this crate only)
axum = { version = "0.8", features = ["ws"] }
# SimpleDetector: pure-Rust JPEG decode of fabric-fetched frames.
jpeg-decoder = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"], optional = true }

[dev-dependencies]
tokio-tungstenite = "0.26"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
