[package]
name = "muas-flight"
description = "Transport-neutral flight/motion primitives for multi-UAS systems (UAS-IPBRC relay.flight extraction, refactored). No MAVLink, no NDN."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
