[package]
name = "muas-mavlink"
description = "MAVLink vehicle adapter for muas-flight (ArduPilot first): field-hardened connect/arm/takeoff/goto behaviors."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
muas-flight = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
